platform-tools/devtools-orchestrator/istio/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: api-gateway-internal
  namespace: istio-system
spec:
  hosts:
    - consumer-api-gateway.uat-consumer.acme.internal
  location: MESH_INTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  addresses:
    - 240.0.0.2
  endpoints:
    - address: istio-ingressgateway.istio-system.svc.cluster.local
---
